--- a/app/views/companies/index.html.erb
+++ b/app/views/companies/index.html.erb
@@ -11,4 +11,5 @@
   <% end %>
 </div>
 
-<%= link_to "New company", new_company_path %>
+<%= link_to "New company", new_company_path, class: "btn btn-primary" %>
+<%= link_to "Go home", root_path, class: "btn btn-warning" %>
