--- a/app/views/companies/_company.html.erb
+++ b/app/views/companies/_company.html.erb
@@ -1,37 +1,7 @@
-<div id="<%= dom_id company %>">
-  <p>
-    <strong>Name:</strong>
-    <%= company.name %>
-  </p>
-
-  <p>
-    <strong>Phone:</strong>
-    <%= company.phone %>
-  </p>
-
-  <p>
-    <strong>Email:</strong>
-    <%= company.email %>
-  </p>
-
-  <p>
-    <strong>Street address:</strong>
-    <%= company.street_address %>
-  </p>
-
-  <p>
-    <strong>City name:</strong>
-    <%= company.city_name %>
-  </p>
-
-  <p>
-    <strong>Postal code:</strong>
-    <%= company.postal_code %>
-  </p>
-
-  <p>
-    <strong>Country:</strong>
-    <%= company.country_id %>
-  </p>
-
-</div>
+<tr id="<%= dom_id company %>">
+  <td><%= link_to company.name, company_path(company) %></td>
+  <td><%= company.phone %></td>
+  <td><%= company.email %></td>
+  <td><%= company.city_name %></td>
+  <td><%= company.country_id %></td>
+</tr>
