home page text pages

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,4 +1,4 @@
 <h1>Bootstrap Test App</h1>
-<p>Let's develop a user interface with Bootstrap. We will use Stimulus and Hotwire on JS side.</p>
+<p>Let's develop a user interface with Bootstrap 5. We will use Stimulus JS and Hotwire.</p>
 
-<%= link_to "Companies", companies_path, class: "btn btn-primary" %> 
+<%= link_to "Companies", companies_path, class: "btn btn-primary" %>
